update label text align issue

--- a/src/labels.less
+++ b/src/labels.less
@@ -4,9 +4,9 @@
   border-radius: .2rem;
   color: lighten(@body-font-color, 20%);
   display: inline-block;
-  font-size: .85em;
-  line-height: 1;
+  font-size: 1em;
   padding: .15em .25em;
+  margin-top: -.15em;
   text-align: center;
   vertical-align: baseline;
   white-space: nowrap;
